# video-sentinel-cpp

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Plan.txt  README.md  conanfile.py  conanfile.txt  develop.sh
.devcontainer/: Dockerfile  devcontainer.json  develop.sh
.github/workflows/: build_and_test.yml  coverage_report.yml
apps/: CMakeLists.txt  main.cpp  webcam_app.cpp
conan_profiles/: clang14_cpp20.prof  clang14_cpp20_debug.prof  gcc11_cpp20.prof  gcc11_cpp20_debug.prof
scripts/: build.sh  debug_build.sh  generate_coverage.sh  lint_clang_tidy.sh  make_debug.sh  make_debug_clang.sh  make_debug_gcc.sh  make_release.sh  make_release_clang.sh  make_release_gcc.sh
src/: CMakeLists.txt  Lib.cpp  Lib.h  update-parallel-lib.sh
src/deduction/: ComparisonParams.h  Draw.h  ObjectTrace.h  Skeleton.h  SkeletonParams.h  Trace.h
src/detection/: AllObjects.h  CMakeLists.txt  Detection.cpp  Detection.h  DetectionImpl.h  Object.h  ObjectMerger.h  ObjectsPerRectangle.h  Rectangle.h  Slices.cpp  Slices.h
src/math2d/: CMakeLists.txt  coordinated.cpp  coordinated.h  math2d.cpp  math2d.h  parallel.h  value_test.h
src/matrix/: Matrix.h
src/par/: Calc.h  Calculation.h  ContinuableWork.h  Executor.h  Flow.h  Mail.h  Poll.h  Task.h  TaskGraph.h  Work.h  parallel.h
src/preview/: SingleObjectPreview.h  preview.h
src/webcam/: CMakeLists.txt  webcam.cpp  webcam.h
tests/: CMakeLists.txt  continuable_work.cpp  object.cpp  parallel.cpp  preview.cpp  slices.cpp  trace.cpp  unittest.cpp  webcam.cpp
